# edlicense

./: .clinerules  .clippy.toml  .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  BENCHMARK_ANALYSIS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN-strict-license-detector.md  README.md  build.rs  export-images.sh  fmt-python.sh  rust-toolchain.toml  test_output.txt
.cargo/: config.toml
.github/: .gitignore
.github/workflows/: docker-publish.yml  release.yml  rust.yml  rustdoc-publish.yml
benchmarks/: benchmark_results.txt  export-benchmark-images.sh  export_benchmark_images.py  generate_benchmarks.py  run_benchmarks.sh  run_comparative_benchmarks.sh  test-benchmark-setup.sh  visualize_comparative_benchmarks.py
examples/: Dockerfile.ci  Dockerfile.custom  basics.md  clap_usage.md  custom_license_template.txt  docker_usage.md  edlicense-config.sh  git_integration.md  licenseignore.md  pre_commit_hook.md  ratchet_mode.md  year_update.md
ref/: .gitignore
src/: config.rs  diff.rs  file_filter.rs  git.rs  ignore.rs  lib.rs  license_detection.rs  logging.rs  main.rs  output.rs  processor.rs  report.rs  templates.rs  tree.rs  workspace.rs
src/cli/: check.rs  mod.rs  tree.rs
src/logging/: mod.rs  modes.rs
src/processor/: content_transformer.rs  file_collector.rs  file_io.rs  mod.rs
test_files/: license.txt  no_license.rs  outdated.rs
tests/: api_tests.rs  cli_ignore_patterns_test.rs  comparative_benchmarks.rs  edge_cases_tests.rs  git_tests.rs  integration_tests.rs  licenseignore_tests.rs  logging_tests.rs  performance_tests.rs  processor_tests.rs  processor_utf8_tests.rs  race_condition_tests.rs  report_tests.rs  template_tests.rs  test_file.rs
tests/common/: mod.rs
