[package]
name = "edlicense"
version = "0.2.0"
authors = ["Edward Jones <edwardrjones97@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "A high-performance Rust tool that ensures source code files have copyright license headers. Features Git integration and automatic year updates. Recursively scans codebases with performance optimizations for large projects - a modern alternative to addlicense."
edition = "2024"
exclude = ["/.github", "/dist", "/benchmarks", "/benchmark_visualizations", "/examples", "/ref"]

[[bin]]
path = "src/main.rs"
name = "edlicense"
test = false

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
glob = "0.3"
ignore = "0.4"
pathdiff = "0.2"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
rayon = "1.10.0"
regex = "1.10"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = { version = "2.4", features = ["inline"] }
termcolor = "1.4"
thiserror = "2.0.11"
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# Warn on these additional lints to keep hygiene consistent across the workspace
[lints.clippy]
# --- Panic & unwrap safety ---
unwrap_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"

# --- Result / Option correctness ---
map_err_ignore = "warn"
bind_instead_of_map = "warn"
map_flatten = "warn"

# --- Logging & debugging hygiene ---
dbg_macro = "warn"

# --- Correctness & readability ---
inefficient_to_string = "warn"
shadow_unrelated = "warn"
match_bool = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"
useless_conversion = "warn"
undocumented_unsafe_blocks = "warn"

# --- API Hygiene ---
missing_const_for_fn = "warn"
redundant_pub_crate = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
